update: new 2025-2026 senior project

--- a/src/pages/about.astro
+++ b/src/pages/about.astro
@@ -61,6 +61,21 @@ import LabFooter from "../components/lab/LabFooter"
                 <h4 class="font-semibold text-blue-gray-900">Daniel Kwon</h4>
                 <p class="text-sm text-gray-600">Undergraduate Researcher</p>
               </div>
+              <div class="text-center">
+                <img src="/people/alina_sainju.jpg" alt="Alina Sainju" class="w-24 h-24 rounded-full object-cover mx-auto mb-3">
+                <h4 class="font-semibold text-blue-gray-900">Alina Sainju</h4>
+                <p class="text-sm text-gray-600">Undergraduate Researcher</p>
+              </div>
+              <div class="text-center">
+                <img src="https://ui-avatars.com/api/?name=Kyle+Houston&background=e0e7ff&color=4338ca&size=128" alt="Kyle Houston" class="w-24 h-24 rounded-full object-cover mx-auto mb-3">
+                <h4 class="font-semibold text-blue-gray-900">Kyle Houston</h4>
+                <p class="text-sm text-gray-600">Undergraduate Researcher</p>
+              </div>
+              <div class="text-center">
+                <img src="https://ui-avatars.com/api/?name=Monica+Zhang&background=dbeafe&color=1e40af&size=128" alt="Monica Zhang" class="w-24 h-24 rounded-full object-cover mx-auto mb-3">
+                <h4 class="font-semibold text-blue-gray-900">Monica Zhang</h4>
+                <p class="text-sm text-gray-600">Undergraduate Researcher</p>
+              </div>
             </div>
             
             <h2 class="text-3xl font-semibold text-blue-gray-900 mb-6">Contact</h2>
